# termworkspace

./: .env.example  .gitignore  LICENSE  README.md  REVIEW-ACCEPTANCE-Phase3.md  ROADMAP.md  config.yaml.example  electron-builder.yml  index.html  install.sh  package-lock.json  package.json  preflight.py  pyproject.toml  requirements.txt  review_results.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.hermes/tasks/: B13-explorer-open-folder-button.md  B14-api-key-config-ui.md
Formula/: termworkspace.rb
docs/: START.md  cross-platform-test-report.md  streaming.md  test-report-2026-07-05.md  test-report-2026-07-06.md  user-guide.md  visual-deliverables.md
docs/knowledge-base/: 1a-fix-1-pty-cleanup.md  P4-1-多窗口拖拽转发.md  Phase2-1-流式响应支持.md  Phase2-2-代码健壮性提升.md  Phase2-3-Workspace模板市场.md  Phase2-4-会话持久化与恢复.md  README.md  TermWorkspace全项目知识库.md  phase-2.1-layout-persistence.md  phase-2.3-theme-switching.md  phase-2.5-open-folder-wizard.md  phase-B1-multi-ai-ipc-fix.md  phase-B2-tab-close-fix.md  phase-b4-window-lifecycle.md  phase-p3-1-integrate-platform.md
docs/knowledge-base/templates/: phase-document-template.md
docs/screenshots/: streaming-verification.txt
docs/screenshots/robustness/: 01-config-wizard.txt  02-invalid-api-key.txt  03-network-down.txt
docs/screenshots/template-market/: 01-export-output.txt  demo_export_import.py
docs/screenshots/user-guide/: 01-main-interface.txt  02-ai-chat.txt  03-dark-theme.txt  04-light-theme.txt  05-file-browser.txt  06-project-dialog.txt  07-empty-tabs.txt  08-split-mode.txt
docs/templates/: general-writing.yaml  programming-debug.yaml  programming-debugging.yaml
scripts/: flatten-electron.cjs  preload.cjs  prepackage.cjs
src/: __init__.py  app.py  providers.py  window.py  workspace.py
src/main/: ai-config.ts  index.ts  platform.ts
src/preload/: index.cjs  index.ts
src/renderer/: App.tsx  index.css  index.html
src/renderer/components/: AIChat.tsx  Cell.tsx  FileTree.tsx  SplitPane.tsx  TabBar.tsx  Terminal.tsx
src/renderer/hooks/: usePty.ts  useTabState.ts
src/termworkspace/: __init__.py  __main__.py  app.py  config.py  providers.py  storage.py  window.py  workspace.py
src/types/: index.ts
tests/: AIChat.test.tsx  Cell.test.tsx  conftest.py  platform.test.ts  removeLeaf.test.ts  replaceLeaf.test.ts  test_config_templates.py  test_edge_cases.py  test_forward.py  test_storage.py  useTabState.test.tsx
tests/integration/: main-process-verify.mjs  pty-tier-test.mjs
