[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termworkspace"
version = "0.1.0"
description = "Terminal-native multi-model AI workspace — bring your own API keys, no platform lock-in"
readme = "README.md"
authors = [
    { name = "SUN", email = "sun@termworkspace.dev" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/termworkspace/termworkspace"
Repository = "https://github.com/termworkspace/termworkspace"
Documentation = "https://github.com/termworkspace/termworkspace"

[project.scripts]
termworkspace = "termworkspace.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/termworkspace"]

[tool.hatch.metadata]
allow-direct-references = true
