[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termworkspace"
version = "0.1.0"
description = "Terminal-native multi-model AI workspace — bring your own API keys, no platform lock-in"
readme = "README.md"
authors = [
    { name = "SUN", email = "sun@termworkspace.dev" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.25",
    "pytest-timeout>=2",
    "ruff>=0.15",
    "mypy>=2.0",
]

[project.urls]
Homepage = "https://github.com/sunjmjmx/termworkspace"
Repository = "https://github.com/sunjmjmx/termworkspace"
Documentation = "https://github.com/sunjmjmx/termworkspace"

[project.scripts]
termworkspace = "termworkspace.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/termworkspace"]

[tool.hatch.metadata]
allow-direct-references = true

# ── Ruff (lint + format) ──
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF100"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"

# ── mypy ──
[tool.mypy]
python_version = "3.12"
strict = false
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
ignore_missing_imports = true
exclude = [".venv/"]

# ── pytest ──
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
